plugins {
    id 'java'

    // not required with the beryx runtime plugin
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
    //id("com.gradleup.shadow") version "9.0.0-beta11"

    // if modular:
    //id 'org.beryx.jlink' version '3.0.1'
    // non modular:
    //https://badass-runtime-plugin.beryx.org/releases/latest/
    //id 'org.beryx.runtime' version '1.13.1'

    //id 'org.graalvm.buildtools.native' version '0.10.5'

    id("com.github.johnrengelman.shadow") version "8.1.1"
}


/*
ext {
    javacppPlatform = 'macosx-arm64'
}
*/

group = 'klik'
version = '0.9'


// this is REQUIRED with a JDK that does not bundle javaFX

javafx {
    version = "23.0.2"
    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.swing','javafx.graphics','javafx.media','javafx.web' ]
}



repositories {
    mavenCentral()
}

/*compileJava {
    // this is needed to enable the virtual threads preview feature in java20
    //options.compilerArgs += ['--enable-preview']
    options.compilerArgs += ['-Xlint:-options']
}*/

/*
java {
    sourceCompatibility = JavaVersion.VERSION_23
    targetCompatibility = JavaVersion.VERSION_23
}
*/

dependencies {
    // EXIF reader
    implementation 'com.drewnoakes:metadata-extractor:2.19.0'
      // Cache
    implementation group: 'com.github.ben-manes.caffeine', name: 'caffeine', version: '3.2.0'

    // moving folders across different drives
    implementation group: 'commons-io', name: 'commons-io', version: '2.19.0'

    // for face recognition: gson is used to serialise the feature vectors between the python server and this app
    implementation 'com.google.code.gson:gson:2.11.0'

}

/*
// beryx runtime plugin
runtime {
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    //modules = ['java.naming', 'java.xml']
}
*/


// these "tasks.register" items work only with a JDK that bundles javafx such as 23.0.2.fx-zulu
tasks.register('klik', JavaExec) {
    dependsOn 'classes'
    mainClass = 'klik.Klik_application'

    // Java VM RAM size options:

    // if you have only 2GB or not much more:
    //applicationDefaultJvmArgs = ["-Xms1G"]

    // if you have a lot of RAM say 64GB or more
    applicationDefaultJvmArgs = ["-Xms50G","-Xmx50G"]
    //applicationDefaultJvmArgs = ["-Xms50G","-Xmx50G","-XX:+UseZGC","-XX:StartFlightRecording:filename=recording.jfr,duration=90s"]
    //applicationDefaultJvmArgs = ["-Xms50G","-Xmx50G","-XX:+UseZGC","-XX:StartFlightRecording:filename=recording.jfr"]


    classpath = sourceSets.main.runtimeClasspath
    group = 'applications'
}
tasks.register('image_viewer', JavaExec) {
    dependsOn 'classes'
    mainClass = 'klik.images.Image_viewer_application'
    classpath = sourceSets.main.runtimeClasspath
    group = 'applications'
}
tasks.register('audio_player', JavaExec) {
    dependsOn 'classes'
    mainClass = 'klik.audio.Audio_player'
    classpath = sourceSets.main.runtimeClasspath
    group = 'applications'
}

tasks.register('TCP_server', JavaExec) {
    dependsOn 'classes'
    mainClass = 'klik.util.tcp.TCP_server'
    classpath = sourceSets.main.runtimeClasspath
    group = 'unit tests'
}
tasks.register('TCP_client', JavaExec) {
    dependsOn 'classes'
    mainClass = 'klik.util.tcp.TCP_client'
    classpath = sourceSets.main.runtimeClasspath
    group = 'unit tests'
}




def main_class_name = 'klik.Launcher'
application {
    //mainModule = 'klikmodule'
    mainClass = main_class_name

}

run{
    standardInput = System.in
    classpath = sourceSets.main.runtimeClasspath
}


tasks.register('klik_the_jar', Jar) {
    manifest {
        attributes('Main-Class': 'klik.Klik_application')
    }
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
        sourceSets.main.output
    }
    exclude 'META-INF/*.SF', 'META-INF/*.DSA', 'META-INF/*.RSA'
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    archiveBaseName.set('Klik')
    archiveVersion.set('1.0')
    destinationDirectory.set(layout.buildDirectory.dir("libs"))
}

tasks.named('build'){
    dependsOn tasks.named('klik_the_jar')
}